WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277739
[CSS] Contextually invalid selector should be ignore for matching/specificity
https://bugs.webkit.org/show_bug.cgi?id=277739
Summary
[CSS] Contextually invalid selector should be ignore for matching/specificity
Matthieu Dubet
Reported
2024-08-07 09:17:26 PDT
With CSS Nesting, some selectors which look valid at parse time become invalid when resolved (because wrapped inside :is()). We should ignore them.
https://github.com/w3c/csswg-drafts/issues/9600
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-07 09:17:49 PDT
<
rdar://problem/133391094
>
Matthieu Dubet
Comment 2
2024-08-27 14:17:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32779
EWS
Comment 3
2024-08-29 20:26:40 PDT
Committed
282944@main
(9309d6597f2b): <
https://commits.webkit.org/282944@main
> Reviewed commits have been landed. Closing PR #32779 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug