[CSS] Contextually invalid selectors have a specificity of 0 https://bugs.webkit.org/show_bug.cgi?id=277739 rdar://133391094

Reviewed by Tim Nguyen.

https://github.com/w3c/csswg-drafts/issues/9600

* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/contextually-invalid-selectors-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/contextually-invalid-selectors.html: Added.
* Source/WebCore/css/CSSSelector.cpp:
(WebCore::maxSpecificity):
(WebCore::simpleSelectorSpecificity):

Canonical link: https://commits.webkit.org/282944@main